<resources>
    <string name="app_name">Shopping List</string>
    <string name="shopping_list">Shopping list</string>
    <string name="hello_user">Hello User!</string>
    <string name="buttontolist">buttontolist</string>
    <string name="click_the_button_below_to_view_your_shopping_list">Click the Button below to view your shopping list! :)</string>
    <string name="add_list_item">Add list item</string>
    <string name="jumo_to_list_view">Jump to list view</string>
    <string name="banane">Banane</string>
    <string name="switch_to_list_view">Switch to list view</string>
    <string name="enter_list_name">Enter list name</string>
    <string name="shopping_list_overview">Your shopping lists</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="delete">Delete</string>
 <string name="deleted">deleted</string>
    <string name="clear">Clear</string>
 <string name="cancel">Cancel</string>
 <string name="add_item">Add item</string>
 <string name="add_list">Add list</string>
 <string name="title">Title</string>
 <string name="message">Message</string>
     <string name="edit">Edit</string>
    <string name="help">Help</string>
    <string name="edit_item_hint">Enter new item name</string>
 <string name="edit_item_title">Edit item</string>
 <string name="edit_list_hint">Enter new list name</string>
 <string name="edit_list_title">Edit list</string>
 <string name="ok">OK</string>
 <string name="error_loading_lists">Error loading shopping lists. Please try again.</string>
    <string name="error_adding_list">Error adding shopping list. Please try again.</string>
    <string name="error_deleting_list">Error deleting shopping list. Please try again.</string>
    <string name="error_adding_item">Error adding item. Please try again.</string>
    <string name="error_clearing_list">Error clearing the shopping list. Please try again.</string>
    <string name="item_added">Item added successfully.</string>
    <string name="list_added">Shopping list added successfully.</string>
    <string name="list_deleted">Shopping list %1$s deleted successfully.</string>
    <string name="list_cleared">%1$s has been cleared successfully.</string>
    <string name="list_not_found">The specified shopping list could not be found.</string>
    <string name="invalid_list_name">Please enter a valid list name.</string>
    <string name="invalid_item_name">Please enter a valid item name.</string>
    <string name="delete_list_title_old">Delete List</string>
 <string name="delete_list_message_old">Are you sure you want to delete the list \'%1$s?\'</string>
    <string name="clear_list_title_old">Clear List</string>
 <string name="clear_list_message_old">Do you really want to clear the list \'%1$s?\'</string>
    <string name="item_name_placeholder">Item name</string>
    <string name="action_settings">Settings</string>
    <string name="action_language">Language</string>
    <string name="add_list_dialog_title">Create new shopping list</string>
    <string name="add_list_dialog_hint">List name</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
 <string name="button_save">Save</string>
    <string name="button_delete">Delete</string>
 <string name="button_edit_list">Rename List</string>
    <string name="button_delete_list">Delete List</string>
    <string name="button_edit_item">Edit Item</string>
    <string name="button_delete_item">Delete Item</string>
    <string name="button_remove_username">Remove Username</string>
    <string name="button_clear_list_all">Delete all items</string>
    <string name="button_clear_list_done">Delete checked</string>
    <string name="confirm_delete_list_title">Delete List</string>
    <string name="confirm_delete_list_message">Do you really want to delete the list \"%s\"?</string>
    <string name="confirm_delete_item_title">Delete Item</string>
    <string name="confirm_delete_item_message">Do you really want to delete the item \"%s\"?</string>
    <string name="confirm_clear_all_items_title">Delete all items</string>
    <string name="confirm_clear_all_items_message">Do you really want to remove all items from this list (including unchecked ones)?</string>
    <string name="confirm_clear_done_items_title">Delete checked items</string>
    <string name="confirm_clear_done_items_message">Do you really want to remove all checked items from this list?</string>
    <string name="hint_item_name">Item name</string>
    <string name="hint_item_quantity">Quantity</string>
    <string name="hint_item_unit">Unit</string>
    <string name="hint_item_notes">Notes (optional)</string>
    <string name="hint_item_quantity_optional">Qty (opt.)</string>
    <string name="hint_item_unit_optional">Unit (opt.)</string>
    <string name="button_add_item_label">Add Item</string>
    <string name="edit_item_dialog_title">Edit Item</string>
    <string name="edit_list_dialog_title">Rename List</string>
    <string name="add_new_item_prompt">Add new item…</string>
    <string name="button_add_item_confirm">Add</string>
    <string name="item_count_suffix_singular">item</string>
    <string name="item_count_suffix_plural">items</string>
    <string name="undo">Undo</string>
 <string name="item_deleted">Item deleted</string>
    <string name="empty_no_lists">No shopping lists yet. Create a new one!</string>
    <string name="empty_no_items">This list is empty. Add some items!</string>
    <string name="clear_entire_list">Clear entire list from items.</string>
    <string name="hint_add_item">Modify item name inline.</string>
    <string name="dialog_clear_list_title">Really clear the list?</string>
    <string name="dialog_clear_list_message">Choose an option:</string>
    <string name="dialog_option_remove_checked">Yes, remove checked items</string>
    <string name="dialog_option_remove_all">Yes, remove all items</string>
    <string name="dialog_option_cancel">No, cancel</string>
    <string name="no_items_yet">0 items</string>
    <string name="share_list">Share list</string>
    <string name="list_imported">List \"%1$s\" imported.</string>
    <string name="incompatible_file">Incompatible file.</string>
    <string name="invite_user">Invite user</string>
    <string name="title_activity_profile">Profile</string>
    <string name="loading">Loading...</string>
    <string name="loading_lists">Loading lists...</string>
    <string name="loading_items">Loading items...</string>
    <string name="loading_profile">Loading profile...</string>
    <string name="loading_signing_in">Signing in...</string>
    <string name="loading_creating_account">Creating account...</string>
    <string name="loading_saving">Saving...</string>
    <string name="loading_uploading">Uploading...</string>
    <string name="profile_info">To allow others to add you to their lists, please choose a unique username.</string>
    <string name="profile_username_hint">Choose username</string>
    <string name="invite_username_hint">Enter username</string>
    <string name="label_username">Username</string>
    <string name="button_join">Join</string>
    <string name="button_decline">Decline</string>
    <string name="button_leave">Leave List</string>
    <string name="member_role_owner">Owner</string>
    <string name="member_role_member">Member</string>
    <string name="member_role_invited">Invited</string>
    <string name="dialog_members_title">List Members</string>
    <string name="profile_warning_anonymous">Attention: Your account is currently tied to this device (Anonymous).\nTo strictly secure your lists, you should register your Account via Email or Google.</string>
    <string name="profile_delete_account">Delete Cloud Account &amp; Data</string>
    <string name="profile_saved">Profile saved!</string>
    <string name="username_removed">Username removed.</string>
    <string name="dialog_remove_username_title">Identity Removal</string>
    <string name="dialog_remove_username_anonymous_warning">Warning: You are using an anonymous account. If you remove your username, other users will only see you as \'Unknown\' and you will lose your unique identification in shared lists.\n\nDo you want to remove only the name or delete the account entirely?</string>
    <string name="button_remove_only_name">Remove only name</string>
    <string name="button_delete_account_entirely">Delete account entirely</string>
    <string name="profile_error_username_taken">Username is unfortunately already taken.</string>
    <string name="profile_error_check_failed">Error checking name.</string>
    <string name="profile_error_empty">Please enter a name</string>
    <string name="profile_error_short">At least 3 characters</string>
    <string name="profile_error_whitespace">No spaces allowed.</string>
    <string name="dialog_delete_account_title">Delete account?</string>
    <string name="dialog_delete_account_message">You will lose access to all shared lists.\n\nIMPORTANT: All shared lists OWNED by you will be irrevocably deleted (also for other members).</string>
    <string name="account_deleted">Account deleted.</string>
    <string name="error_delete_account">Error: %s</string>
    <string name="auth_required">Authentication required.</string>
    <string name="profile_required_title">Profile required</string>
    <string name="profile_required_message">To share lists, you must create a username so others can find you.</string>
    <string name="create_profile_button">Create Profile</string>
    <string name="invite_user_message">Enter the username of the person you want to invite.</string>
    <string name="invite_button">Invite</string>
    <string name="user_invited">User \'%s\' invited.</string>
    <string name="user_not_found">User \'%s\' not found.</string>
    <string name="shared_list_created">Shared list \"%s\" created</string>
    <string name="local_list_created">Private list \"%s\" created</string>
    <string name="list_type_private">Personal List</string>
    <string name="list_type_shared">Shared List</string>
    <string name="list_type_private_desc">Your own list. Cloud backup included.</string>
    <string name="list_type_shared_desc">Plan and edit together with others.</string>
    <string name="error_create_shared_list">Error creating shared list.</string>
    <string name="error_username_cooldown">You can only change your username once a week.</string>
    <string name="error_check_date">Error checking date.</string>
    <string name="error_member_already_exists">This user is already a member of the list.</string>
    <string name="member_is_me">" (You)"</string>
    <string name="invited_by">Invited by %s</string>
    <string name="prompt_email">Email or Username</string>
    <string name="prompt_password">Password</string>
    <string name="invite_user_hint_mixed">Enter username or email</string>
    <string name="invite_user_message_mixed">Enter the username or email of the person you want to invite.</string>
    <string name="error_email_or_username_required">Email or Username is required</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_register">Register</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_apple">Sign in with Apple</string>
    <string name="auth_success">Authentication successful</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="email_sent">If an account exists, an email has been sent.</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_invalid_email">Please enter a valid email address.</string>
    <string name="dialog_profile_pic_title">Profile Picture</string>
    <string name="option_new_image">Choose new image</string>
    <string name="option_remove_image">Remove image</string>
</resources>