<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share_list"
        android:title="@string/share_list"
        android:icon="@drawable/ic_share_24"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnSurface" />

    <item
        android:id="@+id/action_clear_list"
        android:title="@string/clear_entire_list"
        android:icon="@drawable/ic_delete_24"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnSurface" />

    <item
        android:id="@+id/action_view_members"
        android:title="@string/dialog_members_title"
        android:icon="@drawable/ic_account_circle_24"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnSurface"
        android:visible="false" />

    <item
        android:id="@+id/action_invite_user"
        android:title="@string/invite_user"
        android:icon="@drawable/ic_person_add_24"
        app:showAsAction="ifRoom"
        app:iconTint="?attr/colorOnSurface"
        android:visible="false" />
</menu>