<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/dark_gray">

    <!-- Titel -->
    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_item_title"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="@color/light_gray"
        android:textSize="25sp" />

    <!-- EditText zur Namensänderung -->
    <EditText
        android:id="@+id/editTextDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_item_hint"
        android:textColorHint="@color/light_gray"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="8dp" />

    <!-- Buttons: OK und Abbrechen -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/orange"
            android:text="@string/cancel"
            android:textColor="@color/light_gray"
            android:textSize="15sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:minWidth="100dp" />

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/teal_700"
            android:text="@string/ok"
            android:textColor="@color/light_gray"
            android:textSize="15sp"
            android:singleLine="true"
            android:ellipsize="end"
            android:minWidth="100dp" />
    </LinearLayout>
</LinearLayout>
