<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="?attr/colorSurface">

    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_profile_pic_title"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textColor="?attr/colorOnSurface"
        android:textStyle="bold"
        android:layout_marginBottom="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_option_new_image"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:text="@string/option_new_image"
        app:icon="@drawable/ic_cloud_upload_24"
        app:iconGravity="textStart"
        app:iconPadding="16dp"
        app:cornerRadius="30dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="?attr/colorOnSurface"
        app:strokeColor="?attr/colorOnSurfaceSecondary"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_option_remove_image"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:text="@string/option_remove_image"
        app:icon="@drawable/ic_delete_24"
        app:iconGravity="textStart"
        app:iconPadding="16dp"
        app:cornerRadius="30dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="?attr/colorError"
        app:iconTint="?attr/colorError"
        app:strokeColor="?attr/colorError"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_dialog_cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/button_cancel"
        android:textColor="@color/dialog_action_text_adaptive"/>

</LinearLayout>