<?xml version="1.0" encoding="utf-8"?>
<!-- activity_einkaufsliste.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EinkaufslisteActivity">

    <LinearLayout
        android:id="@+id/add_item_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:background="?attr/colorSurface" android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/edit_text_new_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_add_item" android:inputType="textCapSentences"
            android:imeOptions="actionDone"
            android:maxLines="1"/>

        <ImageButton
            android:id="@+id/button_confirm_add_item"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_save_24" android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/button_save"
            android:layout_marginStart="8dp"/>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/add_item_input_layout" app:layout_constraintBottom_toTopOf="@+id/button_clear_list_new_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/recyclerview_row" />

    <TextView
        android:id="@+id/empty_view_items"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_no_items"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/add_item_input_layout"
        app:layout_constraintBottom_toTopOf="@+id/button_clear_list_new_position"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_clear_list_new_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/clear_entire_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fab_add_item"
        app:srcCompat="@drawable/ic_delete_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_item"
        app:srcCompat="@drawable/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>